--- a/app/style.less
+++ b/app/style.less
@@ -3,3 +3,69 @@ html {
         font-size: 25px;
     }
 }
+
+/*
+
+*/
+
+.list-container {
+    .list {
+        position: relative;
+        
+        .inner {
+            position: relative;
+            border: 1px solid black;
+            
+            .left {
+                h1 {
+                    margin: 0;
+                    padding: 0;
+                }
+                span.days {}
+            }
+            
+            .right {
+                position: absolute;
+                top: 0;
+                right: 0;
+                
+                a {
+                    display: block;
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                }
+                
+                a.decrement {
+                    left: 0;
+                    width: 20%;
+                    background-color: blue;
+                }
+                a.increment {
+                    right: 0;
+                    width: 80%;
+                    background-color: red;
+                }
+            }
+            
+            ul.books {
+                margin: 0;
+                padding: 0;
+                
+                li {
+                    list-style-type: none;
+                    display: inline-block;
+                    padding-right: 0.5em;
+                }
+                li.next {
+                    font-weight: bold;
+                }
+            }
+        }
+        
+        .eta {
+            span.date {}
+            span.days {}
+        }
+    }
+}
