--- a/app/style.less
+++ b/app/style.less
@@ -1,6 +1,13 @@
+@lightGrey: #666666;
+@black: #333333;
+
 html {
     body {
+        font-family: sans-serif;
         font-size: 25px;
+        padding: 0;
+        margin: 0;
+        color: @black;
     }
 }
 
@@ -8,32 +15,58 @@ html {
 
 */
 
+h1 {
+    text-align: center;
+    font-weight: normal;
+}
+
 .list-container {
+    width: 800px;
+    margin: 0 auto;
+    
     .list {
         position: relative;
+        margin-bottom: 2em;
+        height: 3em;
         
         .inner {
             position: relative;
-            border: 1px solid black;
+            border: 1px solid @black;
+            padding: .25em 0;
             
             .left {
+                width: 6em;
+                border-right: 1px solid @lightGrey;
+                
                 h1 {
+                    font-size: 1.3em;
                     margin: 0;
                     padding: 0;
                 }
-                span.days {}
+                p.days {
+                    text-align: center;
+                    margin: 0;
+                    padding: 0;
+                    font-size: 0.7em;
+                    color: @lightGrey;
+                }
             }
             
             .right {
                 position: absolute;
                 top: 0;
                 right: 0;
+                width: 100px;
                 
                 a {
                     display: block;
                     position: absolute;
                     top: 0;
                     bottom: 0;
+                    
+                    &:hover {
+                        background-color: green;
+                    }
                 }
                 
                 a.decrement {
@@ -51,6 +84,13 @@ html {
             ul.books {
                 margin: 0;
                 padding: 0;
+                position: absolute;
+                top: 0;
+                left: 8em;
+                right: 100px;
+                bottom: 0;
+                font-size: 0.8em;
+                margin: 0 auto;
                 
                 li {
                     list-style-type: none;
@@ -64,8 +104,19 @@ html {
         }
         
         .eta {
-            span.date {}
-            span.days {}
+            position: absolute;
+            top: 0;
+            right: -6.5em;
+            font-size: 0.55em;
+            width: 6em;
+            color: @lightGrey;
+            
+            span.date {
+                display: block;
+            }
+            span.days {
+                display: block;
+            }
         }
     }
 }
